# yapimpl

./: .gitignore  .gitmodules  CMakeLists.txt
acmake/: acmake_fixup.cmake.in
cmake/: yapimpl-config.cmake
include/yapimpl/: access.hpp  access_fwd.hpp  cast.hpp  delay_method.hpp  host_traits.hpp  impl_traits.hpp  outside.hpp  remove_all.hpp  shared.hpp  shared_impl.hpp  traits.hpp  unique.hpp  unique_impl.hpp  use_default_ctor.hpp
include/yapimpl/include/: outside.hpp  shared.hpp  shared_impl.hpp  unique.hpp  unique_impl.hpp
test/: CMakeLists.txt
test/shared/: CMakeLists.txt  main.cpp  someclass.cpp  someclass.hpp  test_ctor.cpp
test/unique/: CMakeLists.txt  main.cpp  someclass.cpp  someclass.hpp
